# simple-c-compiler

./: .clang-format  CMakeLists.txt  README.org  compiler_driver.bash
include/sc2/: assembly_ast.hpp  assembly_generator.hpp  ast.hpp  compiler_error.hpp  lexer.hpp  parser.hpp  pretty_printer_mixin.hpp  semantic_analysis_error.hpp  tacky_ast.hpp  test_fixtures.hpp  tokens.hpp  utility.hpp
src/: assembly_ast.cpp  ast.cpp  compiler.cpp  lexer.cpp  parser.cpp  tacky_ast.cpp  tokens.cpp
test/: CMakeLists.txt  assembly_tests.cpp  code_generator_tests.cpp  lexer_tests.cpp  parser_tests.cpp  tacky_tests.cpp  tests.cpp
